# RKNN_LearnNotes

./: README.md
01_RKNN_Demo1/: CMakeLists.txt  Makefile
01_RKNN_Demo1/src/: main.cpp  main2.cpp
01_RKNN_Demo1/src/engine/: CMakeLists.txt  engine.h  rknn_engine.cpp  rknn_engine.h
01_RKNN_Demo1/src/types/: CMakeLists.txt  datatypes.cpp  datatypes.h  error_types.h
01_RKNN_Demo1/src/utils/: CMakeLists.txt  engine_helper.cpp  engine_helper.h  logging.h
01_RKNN_Demo1/weigths/: classs.txt
02_VSCode_Learn/: CMakeLists.txt  Makefile  Makefile-ARM64  Makefile-linux  main.cpp
02_VSCode_Learn/src/: Object.cpp  Object.h
03_convert_code/: datasets.txt  onnx_yolov5_0.npy  onnx_yolov5_1.npy  onnx_yolov5_2.npy  readme.md  yolov5_convert.py
rk3588-yolov5/: CMakeLists.txt  README.md
rk3588-yolov5/src/: yolov5_test.cpp  yolov5_video.cpp
rk3588-yolov5/src/draw/: cv_draw.cpp  cv_draw.h
rk3588-yolov5/src/engine/: engine.h  rknn_engine.cpp  rknn_engine.h
rk3588-yolov5/src/process/: postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
rk3588-yolov5/src/task/: yolov5.cpp  yolov5.h
rk3588-yolov5/src/types/: yolo_datatype.h
rk3588-yolov5/src/utils/: engine_helper.h  logging.h
yolov5-thread-stream/: CMakeLists.txt  LICENSE  README.md  yunyan_simple_config.ini
yolov5-thread-stream/src/: img_demo.cpp  rtsp_to_rtsp_demo.cpp  thread_pool_demo.cpp
yolov5-thread-stream/src/draw/: cv_draw.h
yolov5-thread-stream/src/process/: postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
yolov5-thread-stream/src/reconfig/: ReConfig.cpp  ReConfig.h
yolov5-thread-stream/src/rkmedia/utils/: mpp_decoder.cpp
yolov5-thread-stream/src/task/: yolov5.cpp  yolov5.h  yolov5_thread_pool.cpp  yolov5_thread_pool.h
yolov5-thread-stream/weights/: yolov5n.rknn
